--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.4.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^7.1.1",
+    "react-select-async-paginate": "^0.7.9",
     "react-toastify": "^11.0.2",
     "reactjs-popup": "^2.0.6"
   },
