--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "luxon": "^3.5.0",
     "react": "^18.3.1",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-loading": "^2.0.3",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-select-async-paginate": "^0.7.9",
     "react-toastify": "^11.0.2",
